--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
     <title>hm-toutiao-78</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but hm-toutiao-78 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
